@@ -1,5 +1,12 @@
 2007-07-28 Xavier Claessens  <xclaesse@gmail.com>
 
+	* libempathy-gtk/empathy-account-widget-jabber.c: Try to guess the
+	server from the jid only if we are using the jabber profile. When we
+	guessed a server don't forget to set the "server" McAccount param,
+	setting the entry's text is not enough.
+
+2007-07-28 Xavier Claessens  <xclaesse@gmail.com>
+
 	* libempathy-gtk/empathy-profile-chooser.c: Improve the sort function
 	a bit to have Jabber before GTalk.
 
